add redirect link

--- a/index.html
+++ b/index.html
@@ -647,6 +647,16 @@
       }
     }
 
+    
+    a.btn-primary,
+    a.nav-cta {
+      display: inline-flex;
+      align-items: center;
+      justify-content: center;
+      text-decoration: none;
+    }
+
+
     @media (prefers-reduced-motion: reduce) {
       * {
         scroll-behavior: auto !important;
@@ -667,9 +677,13 @@
         <img src="logo-onepos.png" alt="ONEPOS">
       </a>
 
-      <button class="nav-cta" type="button">
-        Coba sekarang!
-      </button>
+      <a href="https://www.figma.com/proto/9s05IP72gGoY7EXKURRBB5/PPD-ONEPOS?node-id=184-2681&t=bYwjOZ3Rtid2ft90-1&scaling=scale-down&content-scaling=fixed&page-id=0%3A1&starting-point-node-id=83%3A220&show-proto-sidebar=1" 
+      class="nav-cta" 
+      target="_blank" 
+      rel="noopener noreferrer">
+      Coba sekarang!
+    </a>
+
     </div>
   </header>
 
@@ -694,9 +708,13 @@
             placeholder="Masukkan email Anda"
             required
           >
-          <button type="submit" class="btn-primary">
-            Coba Sekarang
-          </button>
+          <a href="https://www.figma.com/proto/9s05IP72gGoY7EXKURRBB5/PPD-ONEPOS?node-id=184-2681&t=bYwjOZ3Rtid2ft90-1&scaling=scale-down&content-scaling=fixed&page-id=0%3A1&starting-point-node-id=83%3A220&show-proto-sidebar=1" 
+        class="btn-primary" 
+        target="_blank" 
+        rel="noopener noreferrer">
+        Coba Sekarang
+        </a>
+
         </form>
       </div>
 
